--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/LeMans_0/24hrsLeMans",
+                url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/eia_gas/EIANaturalGasUseData-Monthlybystate",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
