--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <script type="text/javascript">
         function initViz() {
-            var containerDiv = document.getElementById("vizContainer"),
+            var containerDiv = document.getElementById("vizContainer1"),
                 url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/abc_resstock_v41_pivot_for_web/Dashboard1",
                 options = {
                     hideTabs: true,
@@ -24,13 +24,8 @@
 </head>
 
 <body onload="initViz();">
-    <div id="vizContainer" style="width:800px; height:700px;"></div>
+    <div id="vizContainer1" style="width:800px; height:700px;"></div>
 </body>
-
-</html> 
-
-<!DOCTYPE html>
-<html>
 
 <head>
     <title>Basic Embed</title>
@@ -39,7 +34,7 @@
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <script type="text/javascript">
         function initViz() {
-            var containerDiv = document.getElementById("vizContainer"),
+            var containerDiv = document.getElementById("vizContainer2"),
                 url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/res_comp_loads/Dashboard12",
                 options = {
                     hideTabs: true,
@@ -55,7 +50,7 @@
 </head>
 
 <body onload="initViz();">
-    <div id="vizContainer" style="width:800px; height:700px;"></div>
+    <div id="vizContainer2" style="width:800px; height:700px;"></div>
 </body>
 
 </html> 
