--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <script type="text/javascript">
         function initViz() {
-            var containerDiv = document.getElementById("vizContainer1"),
+            var containerDiv1 = document.getElementById("vizContainer1"),
                 url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/abc_resstock_v41_pivot_for_web/Dashboard1",
                 options = {
                     hideTabs: true,
@@ -17,7 +17,7 @@
                     }
                 };
 
-            var viz = new tableau.Viz(containerDiv, url, options);
+            var viz = new tableau.Viz(containerDiv1, url, options);
             // Create a viz object and embed it in the container div.
         }
     </script>
@@ -34,7 +34,7 @@
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <script type="text/javascript">
         function initViz() {
-            var containerDiv = document.getElementById("vizContainer2"),
+            var containerDiv2 = document.getElementById("vizContainer2"),
                 url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/res_comp_loads/Dashboard12",
                 options = {
                     hideTabs: true,
@@ -43,7 +43,7 @@
                     }
                 };
 
-            var viz = new tableau.Viz(containerDiv, url, options);
+            var viz = new tableau.Viz(containerDiv2, url, options);
             // Create a viz object and embed it in the container div.
         }
     </script>
