--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body onload="initViz();">
     <div id="vizContainer1" style="width:800px; height:700px;"></div>
 </body>
+	
+</html> 
 
+<html>
 <head>
     <title>Basic Embed</title>
 
