--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript"
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
     <script type="text/javascript">
-        function initViz1() {
-            var containerDiv1 = document.getElementById("vizContainer1"),
+        function initViz() {
+            var containerDiv = document.getElementById("vizContainer"),
                 url = "https://public.tableau.com/profile/eric.wilson2220#!/vizhome/abc_resstock_v41_pivot_for_web/Dashboard1",
                 options = {
                     hideTabs: true,
@@ -17,14 +17,14 @@
                     }
                 };
 
-            var viz1 = new tableau.Viz(containerDiv1, url, options);
+            var viz = new tableau.Viz(containerDiv, url, options);
             // Create a viz object and embed it in the container div.
         }
     </script>
 </head>
 
-<body onload="initViz1();">
-    <div id="vizContainer1" style="width:800px; height:700px;"></div>
+<body onload="initViz();">
+    <div id="vizContainer" style="width:800px; height:700px;"></div>
 </body>
 
 
