--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
-<iframe seamless frameborder="0" src="https://public.tableau.com/views/abc_resstock_v41_pivot_for_web/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no" width = '650' height = '450'></iframe> 
-test
+<iframe seamless frameborder="0" 
+        src="https://public.tableau.com/views/abc_resstock_v41_pivot_for_web/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no"
+        width = '800' 
+        height = '900'>
+</iframe> 
+
+<iframe seamless frameborder="0" 
+        src="https://public.tableau.com/views/abc_resstock_v41_pivot_for_web/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no"
+        width = '800' 
+        height = '900'>
+</iframe> 
+
+<iframe seamless frameborder="0" 
+        src="https://public.tableau.com/views/abc_resstock_v41_pivot_for_web/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no"
+        width = '800' 
+        height = '900'>
+</iframe> 
+
+<iframe seamless frameborder="0" 
+        src="https://public.tableau.com/views/abc_resstock_v41_pivot_for_web/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no"
+        width = '800' 
+        height = '900'>
+</iframe> 
+
